[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfmto"
authors = [{name = "Xiaoxu Zhang", email = "xxzhang_official@163.com"}]
description = "A Python library for federated many-task optimization research"
readme = "README.md"
requires-python = ">=3.9"
#license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "requests",
    "tabulate",
    "tqdm",
    "uvicorn",
    "wrapt",
    "fastapi",
    "setproctitle",
    "scipy",
    "scikit-learn",
    "seaborn",
    "matplotlib",
    "pyDOE",
    "opfunu",
    "ruamel-yaml",
    "smt",
    "egobox",
    "scienceplots",
    "msgpack",
    "pydacefit",
    "jinja2",
    "openpyxl"
   ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Researchers",
    "Operating System :: OS Independent"
]

[tool.setuptools.package-data]
"pyfmto.problems" = ["*.yaml", "datasets/**/*"]
"pyfmto.utilities" = ["*.yaml"]

[project.urls]
Homepage = "https://github.com/Xiaoxu-Zhang/pyfmto"

[tool.setuptools.dynamic]
version = {attr = "pyfmto.__version__"}