[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfmto"
authors = [{name = "Xiaoxu Zhang", email = "xxzhang_official@163.com"}]
description = "A Python library for federated many-task optimization research"
readme = "README.md"
requires-python = ">=3.9"
#license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "egobox",
    "fastapi",
    "jinja2",
    "matplotlib",
    "msgpack",
    "numpy",
    "openpyxl",
    "opfunu",
    "pandas",
    "pyDOE",
    "pydacefit",
    "pyyaml",
    "requests",
    "ruamel-yaml",
    "scienceplots",
    "scikit-learn",
    "scipy",
    "seaborn",
    "setproctitle",
    "smt",
    "tabulate",
    "tqdm",
    "uvicorn",
    "wrapt",
   ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Researchers",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Xiaoxu-Zhang/pyfmto"

[tool.setuptools.dynamic]
version = {attr = "pyfmto.__version__"}

# tool configurations
[tool.setuptools.package-data]
"pyfmto.problems" = ["*.yaml", "datasets/**/*"]
"pyfmto.utilities" = ["*.yaml"]

[tool.pytest.ini_options]
addopts = [
    "--cov=pyfmto",
    "--cov-report=html:coverage/html"
]
env = ["COLUMNS=129"]
testpaths = ["tests/"]
filterwarnings = [
    "ignore:FigureCanvasAgg is non-interactive",
    "ignore:pkg_resources is deprecated as an API"
]

[tool.coverage.run]
data_file = "coverage/.coverage"
source = ["pyfmto"]
omit = ["*/pyfmto/algorithms/*"]

[tool.coverage.html]
directory = "coverage/html"

[tool.mypy]
files = ["src/"]
exclude = ["src/pyfmto/algorithms/", "src/pyfmto/problems/benchmarks/"]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true

[tool.flake8]
exclude = ["src/pyfmto/algorithms/", "*temp*"]
max-line-length = 120
count = true
